Changes in 20.2 (18-OCT-2001)
=============================
 - Added NLS/gettext
 - fuser no longer assume st_dev is 0 for sockets, needed for kernel 2.4.12
   and above, Thanks to Alexander Viro for the patch.
 - Search both IPv4 and IPv6 namespaces.

Changes in 20.1 (31-MAR-2001)
=============================
 - command line -<num> put back in.
 - got rid of annoying "sending signal #" debug message
 - updated killall.1
 - updated killall usage 
 - verbose now tells you what signal it is killing with.
 
Changes from 19 to 20 (14-DEC-2000)
===================================
 - New maintainer
 - Uses automake/autoconf to determine things
 - License changed to GPL
 - signames.h generated better (suggested by Grant Erickson)
 - uses getopt() for better command line stuff
 - makes less assumptions about process name, closes Debian Bug #53337
 - Doesn't use losetup for loop devices in fuser.
 - Better selection of process name (thanks to David desJardins)

Changes from version 18 to 19 (25-OCT-1999)
=============================

 - pstree: "static int" was only "static" (fix by Jeremy Buhler)
 - now uses cc -E instead of /lib/cpp (suggested by Kristofer Karas)
 - fuser: -s conflicted with -k (reported by David Hinds)
 - fuser: using -a with -s now yields an error
 - added a sanity check for signames.h (suggested by John Summerfield)
 - only "signals" < 100 are now added to signames.h, eliminating SIGSTKSZ


Changes from version 17 to 18 (1-NOV-1998)
=============================

 - fuser: usage summary listed -s (silent) as -q
 - fuser: fuser x/y yielded confusing error message if x/y doesn't exist
   (reported by Tigran Aivazian)
 - fuser: new option -i for interactive killing (like killall -i)
 - killall: tried to print a NULL pointer if full process name was unavailable
   and killing failed
 - killall: new option -g to kill process group instead of process
 - killall: cosmetic PROC_BASE changes (by Florian La Roche)